# hapax-officium

./: .coderabbit.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  codecov.yml  codemeta.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-fix.yml  ci.yml  claude-review.yml  codebase-map.yml  sdlc-axiom-gate.yml  sdlc-implement.yml  sdlc-review.yml  sdlc-triage.yml  semgrep.yml
docs/: api-reference.md
logos/api/routes/: data.py
officium-web/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
sdlc/: __init__.py
tests/: test_api.py
vscode/: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
vscode/src/: vault.ts
