[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agents", "logos", "shared"]

[project]
name = "hapax-officium"
version = "1.0.0"
description = "Management decision support system for engineering managers"
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-PolyForm-Strict-1.0.0"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.0",
    "jinja2>=3.1",
    "langfuse>=4.14.1",
    "matplotlib>=3.11.1",
    "ollama>=0.6.2",
    "pillow>=12.3.0",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.99.0,<2",
    "pyyaml>=6.0",
    "qdrant-client>=1.18.0",
    "sse-starlette>=3.4.6",
    "uvicorn>=0.51.0",
    "watchdog>=4.0.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "moviepy>=2.0.0",
    "numpy>=2.5.1",
]

[project.scripts]
logos = "logos.__main__:main"
logos-api = "logos.api.__main__:main"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
extend = "ruff.toml"

[tool.uv]
override-dependencies = [
    # moviepy 2.2.1 still declares pillow<12, but the patched Pillow floor is
    # required for the high-severity Dependabot alerts covered by this task.
    "pillow>=12.2.0",
]
